array.island.Island.scala.error
Erreur de compilation :
Island:6: error: identifier expected but integer literal found.
    if (num[n-1]>num[n]){
              ^Island:9: error: ']' expected but '}' found.
  }
  ^